tests/testfiles/passing/invalid_identifiers/keyword_as_id_void.c
/* Keyword as identifier: void */
int main() {
    int void;
}